# qualityplaybook.dev

./: .gitignore  CLI.md  DEPLOYMENT.md  LICENSE  LOCAL_K3S_DEPLOYMENT.md  Makefile  NEXT_STEPS.md  QUICKSTART.md  README.md  docker-compose.yml  qp  qp.py
.claude/: claude.md
.github/: BRANCH_PROTECTION.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: blog.py
backend/app/services/: markdown_parser.py
backend/content/blog/: 4107-days-of-running-one-commit-at-a-time.md  argocd-gitops-kubernetes.md  automating-the-job-hunt.md  bombing-interviews-and-taking-notes.md  building-scalable-test-frameworks.md  bye-pip-hello-uv.md  crewai-testing-crew-announcement.md  introducing-quality-missingtable-dashboard.md  missingtable-q1-2026-update.md  opentofu-ninja-training-multi-cloud-k8s.md  python-puzzles.md  resume-as-code-beating-the-robots.md  the-silverbeer-origin-story.md  welcome-to-quality-playbook.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  vite-env.d.ts
frontend/src/assets/: main.css
frontend/src/components/: AppFooter.vue  AppHeader.vue  BlogCard.vue  RunningStreak.vue
helm/backend/: Chart.yaml  values.yaml
helm/frontend/: Chart.yaml  values.yaml
helm/qualityplaybook/: Chart.yaml  values.yaml
k8s/local/: ingress.yaml  persistent-volume.yaml
scripts/: k3s-deploy.sh  k3s-redeploy.sh  setup-local.sh
(+16 files in other folders)
